added package line
added "package GoFish;" to prevent error

--- a/TestGoFishWorking/.classpath
+++ b/TestGoFishWorking/.classpath
@@ -2,7 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Kimbo/Desktop/Ravnit Email Version/TestGoFish/src/mysql-connector-java-5.1.44/mysql-connector-java-5.1.44-bin.jar"/>
-	<classpathentry kind="lib" path="src/mysql-connector.jar"/>
+	<classpathentry kind="lib" path="D:/_KCC/Documents/GitHub/INFO-2413-System-Development-Project-S10-/INFO-2413-System-Development-Project-S10-/TestGoFishWorking/src/mysql-connector-java-5.1.44/mysql-connector-java-5.1.44-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
